--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <div class="loader fixed inset-0 bg-black flex flex-col items-center justify-center z-50">
-        <h1 class="text-white text-2xl font-bold">Random Frames</h1>
+        <!-- <h1 class="text-white text-2xl font-bold">Random Frames</h1> -->
         <video class="loader-video w-full h-full object-cover absolute" id="loaderVideo" autoplay muted loop>
             <source src="v-5.mp4" type="video/mp4">
             Your browser does not support the video tag.
