--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </video>
     </div>
 
-    <div class="main hidden flex-1 flex flex-col items-center justify-center bg-black relative p-4">
+    <div class="main hidden flex-1 flex flex-col items-center justify-center bg-black relative p-4 ">
         <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Random Frames</h1>
         <p class="text-white text-lg mb-6 text-center px-4">Welcome to IIIT Delhi's upcoming Film Making, Cinematography, Directing, and Editing Society. Join us to explore the art of filmmaking and connect with like-minded enthusiasts.</p>
-        <a href="https://chat.whatsapp.com/GHnbarxYBkyAP7HE9iTqH8" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition" target="_blank">Join Us</a>
+        <a href="https://chat.whatsapp.com/GHnbarxYBkyAP7HE9iTqH8" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition mb-20 " target="_blank">Join Us</a>
     </div>
 
     <div class="absolute bottom-4 right-4 text-white px-4 py-2 rounded-lg shadow-lg">
