--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Frames</title>
+    <title>KLERA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,6 @@
     <header class="header bg-black text-white py-4">
         <div class="container mx-auto text-center flex flex-wrap items-center justify-center gap-6 font-normal mt-4">
             <a href="#" class="text-white no-underline hover:scale-105 text-sm">Home</a>
-            <a href="mailto:abhigyan23018@iiitd.ac.in" class="text-white no-underline hover:scale-105 text-sm">Contact</a>
             <a href="#" class="text-white no-underline hover:scale-105 text-sm">About</a>
         </div>
     </header>
@@ -25,9 +24,9 @@
     </div>
 
     <div class="main hidden flex-1 flex flex-col items-center justify-center bg-black relative p-4 ">
-        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Random Frames</h1>
-        <p class="text-white text-lg mb-6 text-center px-4">Welcome to IIIT Delhi's upcoming Film Making, Cinematography, Directing, and Editing Society. Join us to explore the art of filmmaking and connect with like-minded enthusiasts.</p>
-        <a href="https://chat.whatsapp.com/GHnbarxYBkyAP7HE9iTqH8" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition mb-20 " target="_blank">Join Us</a>
+        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Kelra</h1>
+        <p class="text-white text-lg mb-6 text-center px-4">We are Klera, a IIIT Delhi-based startup, brings retro games back with a rewarding twist—You Play, You Win, You Earn real money!</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMH1F91ik7x_piwEwqYjpFZ_Gtm4a0qu0S7jO2zB0ZuuZwAg/viewform" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition mb-20 " target="_blank">Join Us</a>
     </div>
 
     <div class="absolute bottom-4 right-4 text-white px-4 py-2 rounded-lg shadow-lg">
