--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="header bg-black text-white py-4">
         <div class="container mx-auto text-center flex flex-wrap items-center justify-center gap-6 font-normal mt-4">
             <a href="#" class="text-white no-underline hover:scale-105 text-sm">Home</a>
+            <a href="#" class="text-white no-underline hover:scale-105 text-sm">Contact</a>
             <a href="#" class="text-white no-underline hover:scale-105 text-sm">About</a>
         </div>
     </header>
@@ -24,7 +25,7 @@
     </div>
 
     <div class="main hidden flex-1 flex flex-col items-center justify-center bg-black relative p-4 ">
-        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Kelra</h1>
+        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Klera!!</h1>
         <p class="text-white text-lg mb-6 text-center px-4">We are Klera, a IIIT Delhi-based startup, brings retro games back with a rewarding twist—You Play, You Win, You Earn real money!</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMH1F91ik7x_piwEwqYjpFZ_Gtm4a0qu0S7jO2zB0ZuuZwAg/viewform" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition mb-20 " target="_blank">Join Us</a>
     </div>
