--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klera</title>
+    <title>Random Frames</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,8 +25,8 @@
     </div>
 
     <div class="main hidden flex-1 flex flex-col items-center justify-center bg-black relative p-4 ">
-        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Klera!!</h1>
-        <p class="text-white text-lg mb-6 text-center px-4">We are Klera, a IIIT Delhi-based startup, brings retro games back with a rewarding twist—You Play, You Win, You Earn real money!</p>
+        <h1 class="text-white text-3xl font-extrabold mb-4 text-center md:text-4xl lg:text-5xl">Welcome to Random Frames!!</h1>
+        <p class="text-white text-lg mb-6 text-center px-4"> IIIT Delhi’s Film Making, Cinematography, Directing, and Editing Society. Dive into the world of filmmaking, connect with fellow enthusiasts</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMH1F91ik7x_piwEwqYjpFZ_Gtm4a0qu0S7jO2zB0ZuuZwAg/viewform" class="bg-white font-semibold text-black px-6 py-2 rounded-xl hover:bg-gray-200 hover:scale-105 transition mb-20 " target="_blank">Join Us</a>
     </div>
 
